parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CORCHETEDER
    CORCHETEIZQ

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> ETIQUETA DOSPUNTOS instrucciones inicio
Rule 2     inicio -> ETIQUETA DOSPUNTOS instrucciones
Rule 3     instrucciones -> instrucciones instruccion
Rule 4     instrucciones -> instruccion
Rule 5     instruccion -> imprimir
Rule 6     instruccion -> salto
Rule 7     instruccion -> salida
Rule 8     instruccion -> instruccion_if
Rule 9     instruccion -> asignacion
Rule 10    instruccion -> destruir
Rule 11    salida -> EXIT PUNTOYCOMA
Rule 12    salto -> GOTO ETIQUETA PUNTOYCOMA
Rule 13    destruir -> UNSET PARIZQUIERDO ID PARDERECHO PUNTOYCOMA
Rule 14    imprimir -> PRINT PARIZQUIERDO final PARDERECHO PUNTOYCOMA
Rule 15    instruccion_if -> IF PARIZQUIERDO relacional PARDERECHO GOTO ETIQUETA PUNTOYCOMA
Rule 16    asignacion -> ID IGUAL operacion PUNTOYCOMA
Rule 17    operacion -> conversion
Rule 18    operacion -> aritmetica
Rule 19    operacion -> logica
Rule 20    operacion -> bit
Rule 21    operacion -> relacional
Rule 22    operacion -> final
Rule 23    conversion -> PARIZQUIERDO INT PARDERECHO final
Rule 24    conversion -> PARIZQUIERDO FLOAT PARDERECHO final
Rule 25    conversion -> PARIZQUIERDO CHAR PARDERECHO final
Rule 26    aritmetica -> final MAS final
Rule 27    aritmetica -> final MENOS final
Rule 28    aritmetica -> final POR final
Rule 29    aritmetica -> final DIV final
Rule 30    aritmetica -> final RESIDUO final
Rule 31    aritmetica -> ABS PARIZQUIERDO final PARDERECHO
Rule 32    logica -> final AND final
Rule 33    logica -> final OR final
Rule 34    logica -> final XOR final
Rule 35    logica -> NOT final
Rule 36    bit -> final AND2 final
Rule 37    bit -> final OR2 final
Rule 38    bit -> final XOR2 final
Rule 39    bit -> final DESPLAZAMIENTOIZQ final
Rule 40    bit -> final DESPLAZAMIENTODER final
Rule 41    bit -> NOT2 final
Rule 42    relacional -> final IGUALIGUAL final
Rule 43    relacional -> final DIFERENTE final
Rule 44    relacional -> final MAYORIGUAL final
Rule 45    relacional -> final MENORIGUAL final
Rule 46    relacional -> final MAYOR final
Rule 47    relacional -> final MENOR final
Rule 48    final -> DECIMAL
Rule 49    final -> ENTERO
Rule 50    final -> ID
Rule 51    final -> MENOS final
Rule 52    final -> READ PARIZQUIERDO PARDERECHO
Rule 53    final -> ARRAY PARIZQUIERDO PARDERECHO
Rule 54    final -> CADENA

Terminals, with rules where they appear

ABS                  : 31
AND                  : 32
AND2                 : 36
ARRAY                : 53
CADENA               : 54
CHAR                 : 25
CORCHETEDER          : 
CORCHETEIZQ          : 
DECIMAL              : 48
DESPLAZAMIENTODER    : 40
DESPLAZAMIENTOIZQ    : 39
DIFERENTE            : 43
DIV                  : 29
DOSPUNTOS            : 1 2
ENTERO               : 49
ETIQUETA             : 1 2 12 15
EXIT                 : 11
FLOAT                : 24
GOTO                 : 12 15
ID                   : 13 16 50
IF                   : 15
IGUAL                : 16
IGUALIGUAL           : 42
INT                  : 23
MAS                  : 26
MAYOR                : 46
MAYORIGUAL           : 44
MENOR                : 47
MENORIGUAL           : 45
MENOS                : 27 51
NOT                  : 35
NOT2                 : 41
OR                   : 33
OR2                  : 37
PARDERECHO           : 13 14 15 23 24 25 31 52 53
PARIZQUIERDO         : 13 14 15 23 24 25 31 52 53
POR                  : 28
PRINT                : 14
PUNTOYCOMA           : 11 12 13 14 15 16
READ                 : 52
RESIDUO              : 30
UNSET                : 13
XOR                  : 34
XOR2                 : 38
error                : 

Nonterminals, with rules where they appear

aritmetica           : 18
asignacion           : 9
bit                  : 20
conversion           : 17
destruir             : 10
final                : 14 22 23 24 25 26 26 27 27 28 28 29 29 30 30 31 32 32 33 33 34 34 35 36 36 37 37 38 38 39 39 40 40 41 42 42 43 43 44 44 45 45 46 46 47 47 51
imprimir             : 5
inicio               : 1 0
instruccion          : 3 4
instruccion_if       : 8
instrucciones        : 1 2 3
logica               : 19
operacion            : 16
relacional           : 15 21
salida               : 7
salto                : 6

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . ETIQUETA DOSPUNTOS instrucciones inicio
    (2) inicio -> . ETIQUETA DOSPUNTOS instrucciones

    ETIQUETA        shift and go to state 2

    inicio                         shift and go to state 1

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> ETIQUETA . DOSPUNTOS instrucciones inicio
    (2) inicio -> ETIQUETA . DOSPUNTOS instrucciones

    DOSPUNTOS       shift and go to state 3


state 3

    (1) inicio -> ETIQUETA DOSPUNTOS . instrucciones inicio
    (2) inicio -> ETIQUETA DOSPUNTOS . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instruccion -> . imprimir
    (6) instruccion -> . salto
    (7) instruccion -> . salida
    (8) instruccion -> . instruccion_if
    (9) instruccion -> . asignacion
    (10) instruccion -> . destruir
    (14) imprimir -> . PRINT PARIZQUIERDO final PARDERECHO PUNTOYCOMA
    (12) salto -> . GOTO ETIQUETA PUNTOYCOMA
    (11) salida -> . EXIT PUNTOYCOMA
    (15) instruccion_if -> . IF PARIZQUIERDO relacional PARDERECHO GOTO ETIQUETA PUNTOYCOMA
    (16) asignacion -> . ID IGUAL operacion PUNTOYCOMA
    (13) destruir -> . UNSET PARIZQUIERDO ID PARDERECHO PUNTOYCOMA

    PRINT           shift and go to state 12
    GOTO            shift and go to state 13
    EXIT            shift and go to state 14
    IF              shift and go to state 15
    ID              shift and go to state 16
    UNSET           shift and go to state 17

    instrucciones                  shift and go to state 4
    instruccion                    shift and go to state 5
    imprimir                       shift and go to state 6
    salto                          shift and go to state 7
    salida                         shift and go to state 8
    instruccion_if                 shift and go to state 9
    asignacion                     shift and go to state 10
    destruir                       shift and go to state 11

state 4

    (1) inicio -> ETIQUETA DOSPUNTOS instrucciones . inicio
    (2) inicio -> ETIQUETA DOSPUNTOS instrucciones .
    (3) instrucciones -> instrucciones . instruccion
    (1) inicio -> . ETIQUETA DOSPUNTOS instrucciones inicio
    (2) inicio -> . ETIQUETA DOSPUNTOS instrucciones
    (5) instruccion -> . imprimir
    (6) instruccion -> . salto
    (7) instruccion -> . salida
    (8) instruccion -> . instruccion_if
    (9) instruccion -> . asignacion
    (10) instruccion -> . destruir
    (14) imprimir -> . PRINT PARIZQUIERDO final PARDERECHO PUNTOYCOMA
    (12) salto -> . GOTO ETIQUETA PUNTOYCOMA
    (11) salida -> . EXIT PUNTOYCOMA
    (15) instruccion_if -> . IF PARIZQUIERDO relacional PARDERECHO GOTO ETIQUETA PUNTOYCOMA
    (16) asignacion -> . ID IGUAL operacion PUNTOYCOMA
    (13) destruir -> . UNSET PARIZQUIERDO ID PARDERECHO PUNTOYCOMA

    $end            reduce using rule 2 (inicio -> ETIQUETA DOSPUNTOS instrucciones .)
    ETIQUETA        shift and go to state 2
    PRINT           shift and go to state 12
    GOTO            shift and go to state 13
    EXIT            shift and go to state 14
    IF              shift and go to state 15
    ID              shift and go to state 16
    UNSET           shift and go to state 17

    inicio                         shift and go to state 18
    instruccion                    shift and go to state 19
    imprimir                       shift and go to state 6
    salto                          shift and go to state 7
    salida                         shift and go to state 8
    instruccion_if                 shift and go to state 9
    asignacion                     shift and go to state 10
    destruir                       shift and go to state 11

state 5

    (4) instrucciones -> instruccion .

    ETIQUETA        reduce using rule 4 (instrucciones -> instruccion .)
    PRINT           reduce using rule 4 (instrucciones -> instruccion .)
    GOTO            reduce using rule 4 (instrucciones -> instruccion .)
    EXIT            reduce using rule 4 (instrucciones -> instruccion .)
    IF              reduce using rule 4 (instrucciones -> instruccion .)
    ID              reduce using rule 4 (instrucciones -> instruccion .)
    UNSET           reduce using rule 4 (instrucciones -> instruccion .)
    $end            reduce using rule 4 (instrucciones -> instruccion .)


state 6

    (5) instruccion -> imprimir .

    ETIQUETA        reduce using rule 5 (instruccion -> imprimir .)
    PRINT           reduce using rule 5 (instruccion -> imprimir .)
    GOTO            reduce using rule 5 (instruccion -> imprimir .)
    EXIT            reduce using rule 5 (instruccion -> imprimir .)
    IF              reduce using rule 5 (instruccion -> imprimir .)
    ID              reduce using rule 5 (instruccion -> imprimir .)
    UNSET           reduce using rule 5 (instruccion -> imprimir .)
    $end            reduce using rule 5 (instruccion -> imprimir .)


state 7

    (6) instruccion -> salto .

    ETIQUETA        reduce using rule 6 (instruccion -> salto .)
    PRINT           reduce using rule 6 (instruccion -> salto .)
    GOTO            reduce using rule 6 (instruccion -> salto .)
    EXIT            reduce using rule 6 (instruccion -> salto .)
    IF              reduce using rule 6 (instruccion -> salto .)
    ID              reduce using rule 6 (instruccion -> salto .)
    UNSET           reduce using rule 6 (instruccion -> salto .)
    $end            reduce using rule 6 (instruccion -> salto .)


state 8

    (7) instruccion -> salida .

    ETIQUETA        reduce using rule 7 (instruccion -> salida .)
    PRINT           reduce using rule 7 (instruccion -> salida .)
    GOTO            reduce using rule 7 (instruccion -> salida .)
    EXIT            reduce using rule 7 (instruccion -> salida .)
    IF              reduce using rule 7 (instruccion -> salida .)
    ID              reduce using rule 7 (instruccion -> salida .)
    UNSET           reduce using rule 7 (instruccion -> salida .)
    $end            reduce using rule 7 (instruccion -> salida .)


state 9

    (8) instruccion -> instruccion_if .

    ETIQUETA        reduce using rule 8 (instruccion -> instruccion_if .)
    PRINT           reduce using rule 8 (instruccion -> instruccion_if .)
    GOTO            reduce using rule 8 (instruccion -> instruccion_if .)
    EXIT            reduce using rule 8 (instruccion -> instruccion_if .)
    IF              reduce using rule 8 (instruccion -> instruccion_if .)
    ID              reduce using rule 8 (instruccion -> instruccion_if .)
    UNSET           reduce using rule 8 (instruccion -> instruccion_if .)
    $end            reduce using rule 8 (instruccion -> instruccion_if .)


state 10

    (9) instruccion -> asignacion .

    ETIQUETA        reduce using rule 9 (instruccion -> asignacion .)
    PRINT           reduce using rule 9 (instruccion -> asignacion .)
    GOTO            reduce using rule 9 (instruccion -> asignacion .)
    EXIT            reduce using rule 9 (instruccion -> asignacion .)
    IF              reduce using rule 9 (instruccion -> asignacion .)
    ID              reduce using rule 9 (instruccion -> asignacion .)
    UNSET           reduce using rule 9 (instruccion -> asignacion .)
    $end            reduce using rule 9 (instruccion -> asignacion .)


state 11

    (10) instruccion -> destruir .

    ETIQUETA        reduce using rule 10 (instruccion -> destruir .)
    PRINT           reduce using rule 10 (instruccion -> destruir .)
    GOTO            reduce using rule 10 (instruccion -> destruir .)
    EXIT            reduce using rule 10 (instruccion -> destruir .)
    IF              reduce using rule 10 (instruccion -> destruir .)
    ID              reduce using rule 10 (instruccion -> destruir .)
    UNSET           reduce using rule 10 (instruccion -> destruir .)
    $end            reduce using rule 10 (instruccion -> destruir .)


state 12

    (14) imprimir -> PRINT . PARIZQUIERDO final PARDERECHO PUNTOYCOMA

    PARIZQUIERDO    shift and go to state 20


state 13

    (12) salto -> GOTO . ETIQUETA PUNTOYCOMA

    ETIQUETA        shift and go to state 21


state 14

    (11) salida -> EXIT . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 22


state 15

    (15) instruccion_if -> IF . PARIZQUIERDO relacional PARDERECHO GOTO ETIQUETA PUNTOYCOMA

    PARIZQUIERDO    shift and go to state 23


state 16

    (16) asignacion -> ID . IGUAL operacion PUNTOYCOMA

    IGUAL           shift and go to state 24


state 17

    (13) destruir -> UNSET . PARIZQUIERDO ID PARDERECHO PUNTOYCOMA

    PARIZQUIERDO    shift and go to state 25


state 18

    (1) inicio -> ETIQUETA DOSPUNTOS instrucciones inicio .

    $end            reduce using rule 1 (inicio -> ETIQUETA DOSPUNTOS instrucciones inicio .)


state 19

    (3) instrucciones -> instrucciones instruccion .

    ETIQUETA        reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    GOTO            reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    EXIT            reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    UNSET           reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 3 (instrucciones -> instrucciones instruccion .)


state 20

    (14) imprimir -> PRINT PARIZQUIERDO . final PARDERECHO PUNTOYCOMA
    (48) final -> . DECIMAL
    (49) final -> . ENTERO
    (50) final -> . ID
    (51) final -> . MENOS final
    (52) final -> . READ PARIZQUIERDO PARDERECHO
    (53) final -> . ARRAY PARIZQUIERDO PARDERECHO
    (54) final -> . CADENA

    DECIMAL         shift and go to state 27
    ENTERO          shift and go to state 28
    ID              shift and go to state 29
    MENOS           shift and go to state 30
    READ            shift and go to state 31
    ARRAY           shift and go to state 32
    CADENA          shift and go to state 33

    final                          shift and go to state 26

state 21

    (12) salto -> GOTO ETIQUETA . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 34


state 22

    (11) salida -> EXIT PUNTOYCOMA .

    ETIQUETA        reduce using rule 11 (salida -> EXIT PUNTOYCOMA .)
    PRINT           reduce using rule 11 (salida -> EXIT PUNTOYCOMA .)
    GOTO            reduce using rule 11 (salida -> EXIT PUNTOYCOMA .)
    EXIT            reduce using rule 11 (salida -> EXIT PUNTOYCOMA .)
    IF              reduce using rule 11 (salida -> EXIT PUNTOYCOMA .)
    ID              reduce using rule 11 (salida -> EXIT PUNTOYCOMA .)
    UNSET           reduce using rule 11 (salida -> EXIT PUNTOYCOMA .)
    $end            reduce using rule 11 (salida -> EXIT PUNTOYCOMA .)


state 23

    (15) instruccion_if -> IF PARIZQUIERDO . relacional PARDERECHO GOTO ETIQUETA PUNTOYCOMA
    (42) relacional -> . final IGUALIGUAL final
    (43) relacional -> . final DIFERENTE final
    (44) relacional -> . final MAYORIGUAL final
    (45) relacional -> . final MENORIGUAL final
    (46) relacional -> . final MAYOR final
    (47) relacional -> . final MENOR final
    (48) final -> . DECIMAL
    (49) final -> . ENTERO
    (50) final -> . ID
    (51) final -> . MENOS final
    (52) final -> . READ PARIZQUIERDO PARDERECHO
    (53) final -> . ARRAY PARIZQUIERDO PARDERECHO
    (54) final -> . CADENA

    DECIMAL         shift and go to state 27
    ENTERO          shift and go to state 28
    ID              shift and go to state 29
    MENOS           shift and go to state 30
    READ            shift and go to state 31
    ARRAY           shift and go to state 32
    CADENA          shift and go to state 33

    relacional                     shift and go to state 35
    final                          shift and go to state 36

state 24

    (16) asignacion -> ID IGUAL . operacion PUNTOYCOMA
    (17) operacion -> . conversion
    (18) operacion -> . aritmetica
    (19) operacion -> . logica
    (20) operacion -> . bit
    (21) operacion -> . relacional
    (22) operacion -> . final
    (23) conversion -> . PARIZQUIERDO INT PARDERECHO final
    (24) conversion -> . PARIZQUIERDO FLOAT PARDERECHO final
    (25) conversion -> . PARIZQUIERDO CHAR PARDERECHO final
    (26) aritmetica -> . final MAS final
    (27) aritmetica -> . final MENOS final
    (28) aritmetica -> . final POR final
    (29) aritmetica -> . final DIV final
    (30) aritmetica -> . final RESIDUO final
    (31) aritmetica -> . ABS PARIZQUIERDO final PARDERECHO
    (32) logica -> . final AND final
    (33) logica -> . final OR final
    (34) logica -> . final XOR final
    (35) logica -> . NOT final
    (36) bit -> . final AND2 final
    (37) bit -> . final OR2 final
    (38) bit -> . final XOR2 final
    (39) bit -> . final DESPLAZAMIENTOIZQ final
    (40) bit -> . final DESPLAZAMIENTODER final
    (41) bit -> . NOT2 final
    (42) relacional -> . final IGUALIGUAL final
    (43) relacional -> . final DIFERENTE final
    (44) relacional -> . final MAYORIGUAL final
    (45) relacional -> . final MENORIGUAL final
    (46) relacional -> . final MAYOR final
    (47) relacional -> . final MENOR final
    (48) final -> . DECIMAL
    (49) final -> . ENTERO
    (50) final -> . ID
    (51) final -> . MENOS final
    (52) final -> . READ PARIZQUIERDO PARDERECHO
    (53) final -> . ARRAY PARIZQUIERDO PARDERECHO
    (54) final -> . CADENA

    PARIZQUIERDO    shift and go to state 44
    ABS             shift and go to state 45
    NOT             shift and go to state 46
    NOT2            shift and go to state 47
    DECIMAL         shift and go to state 27
    ENTERO          shift and go to state 28
    ID              shift and go to state 29
    MENOS           shift and go to state 30
    READ            shift and go to state 31
    ARRAY           shift and go to state 32
    CADENA          shift and go to state 33
